Fixed issue #11888: date question type on small screen Dev: remove glyphicons from default template Dev: use fa in date

--- a/templates/default/css/template-core.css
+++ b/templates/default/css/template-core.css
@@ -120,26 +120,26 @@ For iPads specifically : add this : (min-device-width: 768px) and (max-device-wi
 @media
 only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
-    table.ls-answers,.ls-answers thead,.ls-answers tbody,.ls-answers th,.ls-answers td,.ls-answers tr {display: block;}
-    .dir-ltr table.ls-answers,.dir-ltr .ls-answers thead,.dir-ltr .ls-answers tbody,.dir-ltr .ls-answers th,.dir-ltr .ls-answers td,.ls-answers tr {text-align:left;}
-    .dir-rtl table.ls-answers,.dir-rtl .ls-answers thead,.dir-rtl .ls-answers tbody,.dir-rtl .ls-answers th,.dir-rtl .ls-answers td,.ls-answers tr {text-align:right;}
+    table.ls-answers,table.ls-answers thead,table.ls-answers tbody,.tablels-answers th,table.ls-answers td,table.ls-answers tr {display: block;}
+    .dir-ltr table.ls-answers,.dir-ltr table.ls-answers thead,.dir-ltr table.ls-answers tbody,.dir-ltr table.ls-answers th,.dir-ltr table.ls-answers td,table.ls-answers tr {text-align:left;}
+    .dir-rtl table.ls-answers,.dir-rtl table.ls-answers thead,.dir-rtl table.ls-answers tbody,.dir-rtl table.ls-answers th,.dir-rtl table.ls-answers td,table.ls-answers tr {text-align:right;}
 
-    .ls-answers thead{display:none} /* We don't need it for accessibility : we already have the label */
+    table.ls-answers thead{display:none} /* We don't need it for accessibility : we already have the label */
 
-    .ls-answers tbody td{text-align:left;}
-    .dir-rtl .ls-answers tbody td{text-align:right;}
+    table.ls-answers tbody td{text-align:left;}
+    .dir-rtl table.ls-answers tbody td{text-align:right;}
 
 /*
-    .ls-answers > tbody > tr > td.radio-item{padding:4px;padding-left: 24px;}
+    table.ls-answers > tbody > tr > td.radio-item{padding:4px;padding-left: 24px;}
 */
 
-    .ls-answers tbody .control-label{text-align:left}
-    .dir-rtl .ls-answers tbody .control-label{text-align:right}
-    .ls-answers .answertextright{text-align:right}
-    .dir-rtl .ls-answers .answertextright{text-align:left}
+    table.ls-answers tbody .control-label{text-align:left}
+    .dir-rtl table.ls-answers tbody .control-label{text-align:right}
+    table.ls-answers .answertextright{text-align:right}
+    .dir-rtl table.ls-answers .answertextright{text-align:left}
 
     /* Show the label */
-    .ls-answers .ls-label-xs-visibility
+    table.ls-answers .ls-label-xs-visibility
     {
         display:block;
         position:relative;
@@ -147,17 +147,17 @@ only screen and (max-width: 760px),
         height: auto;
         overflow:initial;
     }
-    .dir-ltr .ls-answers .ls-label-xs-visibility{left:auto;}
-    .dir-rtl .ls-answers .ls-label-xs-visibility{right:auto;}
+    .dir-ltr table.ls-answers .ls-label-xs-visibility{left:auto;}
+    .dir-rtl table.ls-answers .ls-label-xs-visibility{right:auto;}
 
-    .ls-answers .radio-item .ls-label-xs-visibility,.ls-answers .checkbox-item .ls-label-xs-visibility{
+    table.ls-answers .radio-item .ls-label-xs-visibility,table.ls-answers .checkbox-item .ls-label-xs-visibility{
         line-height: initial;
         text-indent: initial;
     }
-    .dir-ltr .ls-answers .radio-item .ls-label-xs-visibility,.dir-ltr .ls-answers .checkbox-item .ls-label-xs-visibility{margin-left:0;}
-    .dir-rtl .ls-answers .radio-item .ls-label-xs-visibility,.dir-rtl .ls-answers .checkbox-item .ls-label-xs-visibility{margin-right:0;}
+    .dir-ltr table.ls-answers .radio-item .ls-label-xs-visibility,.dir-ltr table.ls-answers .checkbox-item .ls-label-xs-visibility{margin-left:0;}
+    .dir-rtl table.ls-answers .radio-item .ls-label-xs-visibility,.dir-rtl table.ls-answers .checkbox-item .ls-label-xs-visibility{margin-right:0;}
 
-    .ls-answers .ls-label-xs-visibility > *
+    table.ls-answers .ls-label-xs-visibility > *
     {
         position:relative;
         top:auto;
@@ -165,17 +165,17 @@ only screen and (max-width: 760px),
         height:auto;
         overflow:auto;
     }
-    .dir-ltr .ls-answers .ls-label-xs-visibility > * {left:auto;}
-    .dir-rtl .ls-answers .ls-label-xs-visibility > * {right:auto;}
+    .dir-ltr table.ls-answers .ls-label-xs-visibility > * {left:auto;}
+    .dir-rtl table.ls-answers .ls-label-xs-visibility > * {right:auto;}
 
-    .dir-ltr .ls-answers .radio-item label.ls-label-xs-visibility::before,.dir-ltr .ls-answers .checkbox-item label.ls-label-xs-visibility::before {margin-left:-20px;}
-    .dir-rtl .ls-answers .radio-item label.ls-label-xs-visibility::before,.dir-rtl .ls-answers .checkbox-item label.ls-label-xs-visibility::before {margin-right:-20px;}
-    .dir-ltr .ls-answers .radio-item label.ls-label-xs-visibility::after,.dir-ltr .ls-answers .checkbox-item label.ls-label-xs-visibility::after {margin-left:-20px;}
-    .dir-rtl .ls-answers .radio-item label.ls-label-xs-visibility::after,.dir-rtl .ls-answers .checkbox-item label.ls-label-xs-visibility::after {margin-right:-20px;}
+    .dir-ltr table.ls-answers .radio-item label.ls-label-xs-visibility::before,.dir-ltr table.ls-answers .checkbox-item label.ls-label-xs-visibility::before {margin-left:-20px;}
+    .dir-rtl table.ls-answers .radio-item label.ls-label-xs-visibility::before,.dir-rtl table.ls-answers .checkbox-item label.ls-label-xs-visibility::before {margin-right:-20px;}
+    .dir-ltr table.ls-answers .radio-item label.ls-label-xs-visibility::after,.dir-ltr table.ls-answers .checkbox-item label.ls-label-xs-visibility::after {margin-left:-20px;}
+    .dir-rtl table.ls-answers .radio-item label.ls-label-xs-visibility::after,.dir-rtl table.ls-answers .checkbox-item label.ls-label-xs-visibility::after {margin-right:-20px;}
 
-    .ls-answers > tbody > tr:hover {
+    table.ls-answers > tbody > tr:hover {
         background-color: transparent;
     }
     /* bs fix */
-    .ls-answers td.visible-xs,.ls-answers th.visible-xs{display:block !important}
+    table.ls-answers td.visible-xs,table.ls-answers th.visible-xs{display:block !important}
 }
